--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -575,12 +575,19 @@
 
         <Grid Height="28" ColumnDefinitions="Auto,*,Auto">
           <Path Grid.Column="0"
-                x:Name="HistoriesFilterModeIcon"
                 Margin="8,0,0,0"
-                Width="14" Height="14"
-                Fill="{DynamicResource Brush.FG2}"/>
+                Width="12" Height="12"
+                Data="{StaticResource Icons.Filter}"
+                Fill="{DynamicResource Brush.FG2}"
+                IsVisible="{Binding HistoriesFilterMode, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:FilterMode.Included}}"/>
+          <Path Grid.Column="0"
+                Margin="8,0,0,0"
+                Width="12" Height="12"
+                Data="{StaticResource Icons.EyeClose}"
+                Fill="{DynamicResource Brush.FG2}"
+                IsVisible="{Binding HistoriesFilterMode, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:FilterMode.Excluded}}"/>
           
-          <ItemsControl Grid.Column="1" Margin="8,0,0,0" ItemsSource="{Binding Settings.HistoriesFilters}" LayoutUpdated="OnHistoriesFiltersLayoutUpdated">
+          <ItemsControl Grid.Column="1" Margin="8,0,0,0" ItemsSource="{Binding Settings.HistoriesFilters}">
             <ItemsControl.ItemsPanel>
               <ItemsPanelTemplate>
                 <VirtualizingStackPanel Orientation="Horizontal" VerticalAlignment="Center"/>
