--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -42,6 +42,13 @@
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Up}"/>
             </Button>
 
+            <TextBlock Classes="primary" 
+                       Margin="0,0,0,0" 
+                       Text="{Binding ChangeBlockIndicator}" 
+                       FontSize="11" 
+                       TextTrimming="CharacterEllipsis"
+                       IsVisible="{Binding IsTextDiff}"/>
+
             <Button Classes="icon_button"
                     Width="28"
                     Click="OnGotoNextChange"
