--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -102,89 +102,93 @@
 
           <!-- PARENTS -->
           <TextBlock Grid.Row="1" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Parents}" IsVisible="{Binding Parents.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}"/>
-          <ItemsControl Grid.Row="1" Grid.Column="1" Height="24" Margin="12,0,0,0" ItemsSource="{Binding Parents}" IsVisible="{Binding Parents.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
-            <ItemsControl.ItemsPanel>
-              <ItemsPanelTemplate>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center"/>
-              </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
+          <ScrollViewer Grid.Row="1" Grid.Column="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" AllowAutoHide="True">
+            <ItemsControl Height="24" Margin="12,0,0,0" ItemsSource="{Binding Parents}" IsVisible="{Binding Parents.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
+              <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                  <StackPanel Orientation="Horizontal" VerticalAlignment="Center"/>
+                </ItemsPanelTemplate>
+              </ItemsControl.ItemsPanel>
 
-            <ItemsControl.ItemTemplate>
-              <DataTemplate>
-                <TextBlock Classes="primary"
-                           Text="{Binding Converter={x:Static c:StringConverters.ToShortSHA}}"
-                           Foreground="DarkOrange"
-                           TextDecorations="Underline"
-                           Cursor="Hand"
-                           Margin="0,0,16,0"
-                           PointerEntered="OnSHAPointerEntered"
-                           PointerPressed="OnSHAPressed">
-                  <TextBlock.Styles>
-                    <Style Selector="ToolTip">
-                      <Setter Property="MaxWidth" Value="600"/>
-                    </Style>
-                  </TextBlock.Styles>
+              <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                  <TextBlock Classes="primary"
+                             Text="{Binding Converter={x:Static c:StringConverters.ToShortSHA}}"
+                             Foreground="DarkOrange"
+                             TextDecorations="Underline"
+                             Cursor="Hand"
+                             Margin="0,0,16,0"
+                             PointerEntered="OnSHAPointerEntered"
+                             PointerPressed="OnSHAPressed">
+                    <TextBlock.Styles>
+                      <Style Selector="ToolTip">
+                        <Setter Property="MaxWidth" Value="600"/>
+                      </Style>
+                    </TextBlock.Styles>
 
-                  <TextBlock.DataTemplates>
-                    <DataTemplate DataType="m:Commit">
-                      <StackPanel MinWidth="400" Orientation="Vertical">
-                        <Grid ColumnDefinitions="Auto,*,Auto">
-                          <v:Avatar Grid.Column="0" Width="16" Height="16" VerticalAlignment="Center" IsHitTestVisible="False" User="{Binding Author}"/>
-                          <TextBlock Grid.Column="1" Classes="primary" Text="{Binding Author.Name}" Margin="8,0,0,0"/>
-                          <TextBlock Grid.Column="2" Classes="primary" Text="{Binding CommitterTimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
-                        </Grid>
+                    <TextBlock.DataTemplates>
+                      <DataTemplate DataType="m:Commit">
+                        <StackPanel MinWidth="400" Orientation="Vertical">
+                          <Grid ColumnDefinitions="Auto,*,Auto">
+                            <v:Avatar Grid.Column="0" Width="16" Height="16" VerticalAlignment="Center" IsHitTestVisible="False" User="{Binding Author}"/>
+                            <TextBlock Grid.Column="1" Classes="primary" Text="{Binding Author.Name}" Margin="8,0,0,0"/>
+                            <TextBlock Grid.Column="2" Classes="primary" Text="{Binding CommitterTimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
+                          </Grid>
 
-                        <TextBlock Classes="primary" Margin="0,8,0,0" Text="{Binding Subject}" TextWrapping="Wrap"/>
-                      </StackPanel>
-                    </DataTemplate>
-                  </TextBlock.DataTemplates>
-                 </TextBlock>
-              </DataTemplate>
-            </ItemsControl.ItemTemplate>
-          </ItemsControl>
+                          <TextBlock Classes="primary" Margin="0,8,0,0" Text="{Binding Subject}" TextWrapping="Wrap"/>
+                        </StackPanel>
+                      </DataTemplate>
+                    </TextBlock.DataTemplates>
+                  </TextBlock>
+                </DataTemplate>
+              </ItemsControl.ItemTemplate>
+            </ItemsControl>
+          </ScrollViewer>
 
           <!-- CHILDREN -->
           <TextBlock Grid.Row="2" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Children}" IsVisible="{Binding #ThisControl.Children.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}"/>
-          <ItemsControl Grid.Row="2" Grid.Column="1" Height="24" Margin="12,0,0,0" ItemsSource="{Binding #ThisControl.Children}" IsVisible="{Binding #ThisControl.Children.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
-            <ItemsControl.ItemsPanel>
-              <ItemsPanelTemplate>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center"/>
-              </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
+          <ScrollViewer Grid.Row="2" Grid.Column="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" AllowAutoHide="True">
+            <ItemsControl Height="24" Margin="12,0,0,0" ItemsSource="{Binding #ThisControl.Children}" IsVisible="{Binding #ThisControl.Children.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
+              <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                  <StackPanel Orientation="Horizontal" VerticalAlignment="Center"/>
+                </ItemsPanelTemplate>
+              </ItemsControl.ItemsPanel>
 
-            <ItemsControl.ItemTemplate>
-              <DataTemplate>
-                <TextBlock Classes="primary"
-                           Text="{Binding Converter={x:Static c:StringConverters.ToShortSHA}}"
-                           Foreground="DarkOrange"
-                           TextDecorations="Underline"
-                           Cursor="Hand"
-                           Margin="0,0,16,0"
-                           PointerEntered="OnSHAPointerEntered"
-                           PointerPressed="OnSHAPressed">
-                  <TextBlock.Styles>
-                    <Style Selector="ToolTip">
-                      <Setter Property="MaxWidth" Value="600"/>
-                    </Style>
-                  </TextBlock.Styles>
+              <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                  <TextBlock Classes="primary"
+                             Text="{Binding Converter={x:Static c:StringConverters.ToShortSHA}}"
+                             Foreground="DarkOrange"
+                             TextDecorations="Underline"
+                             Cursor="Hand"
+                             Margin="0,0,16,0"
+                             PointerEntered="OnSHAPointerEntered"
+                             PointerPressed="OnSHAPressed">
+                    <TextBlock.Styles>
+                      <Style Selector="ToolTip">
+                        <Setter Property="MaxWidth" Value="600"/>
+                      </Style>
+                    </TextBlock.Styles>
 
-                  <TextBlock.DataTemplates>
-                    <DataTemplate DataType="m:Commit">
-                      <StackPanel MinWidth="400" Orientation="Vertical">
-                        <Grid ColumnDefinitions="Auto,*,Auto">
-                          <v:Avatar Grid.Column="0" Width="16" Height="16" VerticalAlignment="Center" IsHitTestVisible="False" User="{Binding Author}"/>
-                          <TextBlock Grid.Column="1" Classes="primary" Text="{Binding Author.Name}" Margin="8,0,0,0"/>
-                          <TextBlock Grid.Column="2" Classes="primary" Text="{Binding CommitterTimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
-                        </Grid>
+                    <TextBlock.DataTemplates>
+                      <DataTemplate DataType="m:Commit">
+                        <StackPanel MinWidth="400" Orientation="Vertical">
+                          <Grid ColumnDefinitions="Auto,*,Auto">
+                            <v:Avatar Grid.Column="0" Width="16" Height="16" VerticalAlignment="Center" IsHitTestVisible="False" User="{Binding Author}"/>
+                            <TextBlock Grid.Column="1" Classes="primary" Text="{Binding Author.Name}" Margin="8,0,0,0"/>
+                            <TextBlock Grid.Column="2" Classes="primary" Text="{Binding CommitterTimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
+                          </Grid>
 
-                        <TextBlock Classes="primary" Margin="0,8,0,0" Text="{Binding Subject}" TextWrapping="Wrap"/>
-                      </StackPanel>
-                    </DataTemplate>
-                  </TextBlock.DataTemplates>
-                </TextBlock>
-              </DataTemplate>
-            </ItemsControl.ItemTemplate>
-          </ItemsControl>
+                          <TextBlock Classes="primary" Margin="0,8,0,0" Text="{Binding Subject}" TextWrapping="Wrap"/>
+                        </StackPanel>
+                      </DataTemplate>
+                    </TextBlock.DataTemplates>
+                  </TextBlock>
+                </DataTemplate>
+              </ItemsControl.ItemTemplate>
+            </ItemsControl>
+          </ScrollViewer>
 
           <!-- REFS -->
           <TextBlock Grid.Row="3" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Refs}" IsVisible="{Binding HasDecorators}"/>
