--- a/src/Views/Fetch.axaml
+++ b/src/Views/Fetch.axaml
@@ -11,7 +11,7 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Fetch.Title}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32" ColumnDefinitions="120,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,32" ColumnDefinitions="120,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -33,10 +33,14 @@
       </ComboBox>
 
       <CheckBox Grid.Row="1" Grid.Column="1"
+                Content="{DynamicResource Text.Fetch.Force}"
+                IsChecked="{Binding Force, Mode=TwoWay}"/>
+
+      <CheckBox Grid.Row="2" Grid.Column="1"
                 Content="{DynamicResource Text.Fetch.AllRemotes}"
                 IsChecked="{Binding FetchAllRemotes, Mode=TwoWay}"/>
 
-      <CheckBox Grid.Row="2" Grid.Column="1"
+      <CheckBox Grid.Row="3" Grid.Column="1"
                 Content="{DynamicResource Text.Fetch.NoTags}"
                 IsChecked="{Binding NoTags, Mode=TwoWay}"/>
     </Grid>
